objects/Warehouse__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Warehouse</label>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Warehouse_Name_Length</fullName>
        <active>true</active>
        <description>In order to ensure no errors in Canvas when creating a FeedItem using the warehouse name, the warehouse name cannot exceed 40 chars.</description>
        <errorConditionFormula>LEN(Name) &gt; 40</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name exceeds length of 40 chars</errorMessage>
    </validationRules>
</CustomObject>